Change getArticlesByCountry country from string to enum, so it automatically throws 400 when invalid value
